--- a/HiringManager.Transactions.UnitTests/HiringManager.Transactions.UnitTests.csproj
+++ b/HiringManager.Transactions.UnitTests/HiringManager.Transactions.UnitTests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreatePositionTests.cs" />
     <Compile Include="HireCandidateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
