--- a/HiringManager.Web.Ninject/HiringManager.Web.Ninject.csproj
+++ b/HiringManager.Web.Ninject/HiringManager.Web.Ninject.csproj
@@ -77,6 +77,10 @@
       <Project>{9A9F6DF1-F1B4-45F1-992D-B140A33558A0}</Project>
       <Name>HiringManager.Domain.EntityFramework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HiringManager.DomainServices.Transactions\HiringManager.DomainServices.Transactions.csproj">
+      <Project>{D45B2834-2AE2-4B87-A3D3-F06D8D077C49}</Project>
+      <Name>HiringManager.DomainServices.Transactions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HiringManager.DomainServices\HiringManager.DomainServices.csproj">
       <Project>{F2CD0E3D-A396-4885-B79A-7810F0A39714}</Project>
       <Name>HiringManager.DomainServices</Name>
@@ -84,10 +88,6 @@
     <ProjectReference Include="..\HiringManager.Mappers\HiringManager.Domain.Mappers.csproj">
       <Project>{CF86D312-49E5-43B2-9397-E2F2721DEAB2}</Project>
       <Name>HiringManager.Domain.Mappers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HiringManager.Transactions\HiringManager.Transactions.csproj">
-      <Project>{D45B2834-2AE2-4B87-A3D3-F06D8D077C49}</Project>
-      <Name>HiringManager.Transactions</Name>
     </ProjectReference>
     <ProjectReference Include="..\HiringManager.Web.ApplicationServices\HiringManager.Web.ApplicationServices.csproj">
       <Project>{C08CC594-CB22-4CBB-905B-41D3B40A140A}</Project>
