--- a/HiringManager.DomainServices.Transactions.UnitTests/HiringManager.DomainServices.Transactions.UnitTests.csproj
+++ b/HiringManager.DomainServices.Transactions.UnitTests/HiringManager.DomainServices.Transactions.UnitTests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D45B2834-2AE2-4B87-A3D3-F06D8D077C49}</ProjectGuid>
+    <ProjectGuid>{CCA019CB-F851-4C5F-BC8D-64A4B239D106}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HiringManager.Transactions</RootNamespace>
-    <AssemblyName>HiringManager.Transactions</AssemblyName>
+    <RootNamespace>HiringManager.DomainServices.Transactions.UnitTests</RootNamespace>
+    <AssemblyName>HiringManager.DomainServices.Transactions.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FizzWare.NBuilder">
+      <HintPath>..\packages\NBuilder.3.0.1.1\lib\FizzWare.NBuilder.dll</HintPath>
+    </Reference>
+    <Reference Include="NSubstitute">
+      <HintPath>..\packages\NSubstitute.1.6.1.0\lib\NET40\NSubstitute.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,9 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreatePosition.cs" />
-    <Compile Include="HireCandidate.cs" />
+    <Compile Include="CreatePositionTests.cs" />
+    <Compile Include="HireCandidateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HiringManager.DomainServices\HiringManager.DomainServices.csproj">
@@ -51,6 +63,10 @@
     <ProjectReference Include="..\HiringManager.Domain\HiringManager.Domain.csproj">
       <Project>{77B8DB13-EC9D-4E56-B298-083B04A8D167}</Project>
       <Name>HiringManager.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HiringManager.DomainServices.Transactions\HiringManager.DomainServices.Transactions.csproj">
+      <Project>{D45B2834-2AE2-4B87-A3D3-F06D8D077C49}</Project>
+      <Name>HiringManager.DomainServices.Transactions</Name>
     </ProjectReference>
     <ProjectReference Include="..\HiringManager\HiringManager.csproj">
       <Project>{791DA4A2-74BD-447B-B2A1-17B1750E2785}</Project>
