added support to display open positions

--- a/HiringManager.Domain/HiringManager.Domain.csproj
+++ b/HiringManager.Domain/HiringManager.Domain.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Isg.Specification">
+      <HintPath>..\packages\Isg.Specification.0.1\lib\net40\Isg.Specification.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,9 +50,17 @@
     <Compile Include="Message.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Specifications\PositionSpecification.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="DomainModel.cd" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HiringManager\HiringManager.csproj">
+      <Project>{791da4a2-74bd-447b-b2a1-17b1750e2785}</Project>
+      <Name>HiringManager</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
