--- a/HiringManager.Domain.Mappers.UnitTests/HiringManager.Domain.Mappers.UnitTests.csproj
+++ b/HiringManager.Domain.Mappers.UnitTests/HiringManager.Domain.Mappers.UnitTests.csproj
@@ -33,6 +33,10 @@
     <Reference Include="FizzWare.NBuilder">
       <HintPath>..\packages\NBuilder.3.0.1.1\lib\FizzWare.NBuilder.dll</HintPath>
     </Reference>
+    <Reference Include="Isg.Specification, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Isg.Specification.0.1\lib\net40\Isg.Specification.dll</HintPath>
+    </Reference>
     <Reference Include="NSubstitute">
       <HintPath>..\packages\NSubstitute.1.6.1.0\lib\NET40\NSubstitute.dll</HintPath>
     </Reference>
@@ -49,7 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreatePositionRequestMapperTests.cs" />
+    <Compile Include="PositionSummaryMapperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryPositionSummariesRequestMapperTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
