--- a/HiringManager.DomainServices.UnitTests/HiringManager.DomainServices.UnitTests.csproj
+++ b/HiringManager.DomainServices.UnitTests/HiringManager.DomainServices.UnitTests.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HiringServiceTests.cs" />
+    <Compile Include="PositionServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
