--- a/HiringManager.Web.Ninject/HiringManager.Web.Ninject.csproj
+++ b/HiringManager.Web.Ninject/HiringManager.Web.Ninject.csproj
@@ -42,10 +42,14 @@
     <Reference Include="Simple.Validation">
       <HintPath>..\packages\Simple.Validation.0.7.1\lib\net40\Simple.Validation.dll</HintPath>
     </Reference>
+    <Reference Include="Simple.Validation.Ninject">
+      <HintPath>..\packages\Simple.Validation.Ninject.0.7.1\lib\net40\Simple.Validation.Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GeneralModule.cs" />
+    <Compile Include="Mappers\EnumerableFluentMapperSyntax.cs" />
+    <Compile Include="Mappers\FluentMapper.cs" />
+    <Compile Include="Mappers\FluentMapperSyntax.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transactions\AuthorizationStep.cs" />
     <Compile Include="Transactions\AuthorizationException.cs" />
@@ -88,10 +95,6 @@
     <ProjectReference Include="..\HiringManager.Mappers\HiringManager.Domain.Mappers.csproj">
       <Project>{CF86D312-49E5-43B2-9397-E2F2721DEAB2}</Project>
       <Name>HiringManager.Domain.Mappers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HiringManager.Web.ApplicationServices\HiringManager.Web.ApplicationServices.csproj">
-      <Project>{C08CC594-CB22-4CBB-905B-41D3B40A140A}</Project>
-      <Name>HiringManager.Web.ApplicationServices</Name>
     </ProjectReference>
     <ProjectReference Include="..\HiringManager\HiringManager.csproj">
       <Project>{791DA4A2-74BD-447B-B2A1-17B1750E2785}</Project>
