--- a/HiringManager.Web.Ninject/packages.config
+++ b/HiringManager.Web.Ninject/packages.config
@@ -4,4 +4,5 @@
   <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
   <package id="ninject.extensions.conventions" version="3.0.0.11" targetFramework="net40" />
   <package id="Simple.Validation" version="0.7.1" targetFramework="net40" />
+  <package id="Simple.Validation.Ninject" version="0.7.1" targetFramework="net40" />
 </packages>
