--- a/HiringManager.Web/packages.config
+++ b/HiringManager.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net40" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net40" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net40" />
@@ -35,8 +36,11 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
+  <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net40" />
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net40" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net40" />
+  <package id="Simple.Validation" version="0.7.1" targetFramework="net40" />
+  <package id="Simple.Validation.Ninject" version="0.7.1" targetFramework="net40" />
   <package id="SqlServerCompact" version="4.0.8854.1" targetFramework="net40" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
   <package id="Twitter.Bootstrap.Sass" version="2.3.2.1" targetFramework="net40" />
