--- a/HiringManager.Web.UnitTests/HiringManager.Web.UnitTests.csproj
+++ b/HiringManager.Web.UnitTests/HiringManager.Web.UnitTests.csproj
@@ -76,8 +76,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\PositionsControllerTests.cs" />
+    <Compile Include="Mappers\CreatePositionViewModelMapperTests.cs" />
     <Compile Include="Mappers\PositionSummaryIndexMapperTests.cs" />
-    <Compile Include="PositionsControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -88,6 +89,10 @@
       <Project>{F2CD0E3D-A396-4885-B79A-7810F0A39714}</Project>
       <Name>HiringManager.DomainServices</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HiringManager.Domain\HiringManager.Domain.csproj">
+      <Project>{77B8DB13-EC9D-4E56-B298-083B04A8D167}</Project>
+      <Name>HiringManager.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HiringManager.Web\HiringManager.Web.csproj">
       <Project>{9406BF32-1749-4A2E-9028-E4D8217F68EF}</Project>
       <Name>HiringManager.Web</Name>
@@ -97,9 +102,7 @@
       <Name>HiringManager</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
