Display Candidate Status for Position page.

--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -72,14 +72,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CandidateStatusDetails.cs" />
+    <Compile Include="ContactInfoDetails.cs" />
     <Compile Include="CreatePositionRequest.cs" />
     <Compile Include="CreatePositionResponse.cs" />
     <Compile Include="HireCandidateRequest.cs" />
     <Compile Include="HireCandidateResponse.cs" />
     <Compile Include="IAccountService.cs" />
     <Compile Include="Impl\AccountService.cs" />
+    <Compile Include="Impl\DomainServiceBase.cs" />
     <Compile Include="Impl\PositionService.cs" />
     <Compile Include="IPositionService.cs" />
+    <Compile Include="PositionDetails.cs" />
     <Compile Include="PositionSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryPositionSummariesRequest.cs" />
