--- a/HiringManager.Mappers.UnitTests/HiringManager.Mappers.UnitTests.csproj
+++ b/HiringManager.Mappers.UnitTests/HiringManager.Mappers.UnitTests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9A9F6DF1-F1B4-45F1-992D-B140A33558A0}</ProjectGuid>
+    <ProjectGuid>{F5EDD768-C081-406A-838C-3E1B5B40B940}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HiringManager.Domain.EntityFramework</RootNamespace>
-    <AssemblyName>HiringManager.Domain.EntityFramework</AssemblyName>
+    <RootNamespace>HiringManager.Mappers.UnitTests</RootNamespace>
+    <AssemblyName>HiringManager.Mappers.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,13 +30,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net40\EntityFramework.dll</HintPath>
+    <Reference Include="FizzWare.NBuilder">
+      <HintPath>..\packages\NBuilder.3.0.1.1\lib\FizzWare.NBuilder.dll</HintPath>
+    </Reference>
+    <Reference Include="Isg.Specification, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Isg.Specification.0.1\lib\net40\Isg.Specification.dll</HintPath>
+    </Reference>
+    <Reference Include="NSubstitute">
+      <HintPath>..\packages\NSubstitute.1.6.1.0\lib\NET40\NSubstitute.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,20 +52,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreatePositionRequestMapperTests.cs" />
+    <Compile Include="PositionDetailsMapperTests.cs" />
+    <Compile Include="PositionSummaryMapperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository.cs" />
+    <Compile Include="QueryPositionSummariesRequestMapperTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HiringManager.DomainServices\HiringManager.DomainServices.csproj">
+      <Project>{F2CD0E3D-A396-4885-B79A-7810F0A39714}</Project>
+      <Name>HiringManager.DomainServices</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HiringManager.Domain\HiringManager.Domain.csproj">
       <Project>{77B8DB13-EC9D-4E56-B298-083B04A8D167}</Project>
       <Name>HiringManager.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HiringManager.Mappers\HiringManager.Mappers.csproj">
+      <Project>{CF86D312-49E5-43B2-9397-E2F2721DEAB2}</Project>
+      <Name>HiringManager.Mappers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HiringManager\HiringManager.csproj">
-      <Project>{791DA4A2-74BD-447B-B2A1-17B1750E2785}</Project>
+      <Project>{791da4a2-74bd-447b-b2a1-17b1750e2785}</Project>
       <Name>HiringManager</Name>
     </ProjectReference>
   </ItemGroup>
