--- a/HiringManager.Mappers/HiringManager.Mappers.csproj
+++ b/HiringManager.Mappers/HiringManager.Mappers.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CF86D312-49E5-43B2-9397-E2F2721DEAB2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HiringManager.Domain.Mappers</RootNamespace>
-    <AssemblyName>HiringManager.Domain.Mappers</AssemblyName>
+    <RootNamespace>HiringManager.Mappers</RootNamespace>
+    <AssemblyName>HiringManager.Mappers</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreatePositionRequestMapper.cs" />
+    <Compile Include="PositionDetailsMapper.cs" />
     <Compile Include="PositionSummaryMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryPositionSummariesRequestMapper.cs" />
