--- a/HiringManager.Web/HiringManager.Web.csproj
+++ b/HiringManager.Web/HiringManager.Web.csproj
@@ -240,6 +240,7 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Accounts\RegisterManagerViewModel.cs" />
     <Compile Include="Models\IndexViewModel.cs" />
+    <Compile Include="Models\Positions\AddCandidateViewModel.cs" />
     <Compile Include="Models\Positions\ContactInfoViewModel.cs" />
     <Compile Include="Models\Positions\PositionCandidatesViewModel.cs" />
     <Compile Include="Models\Positions\CreatePositionViewModel.cs" />
@@ -358,6 +359,10 @@
     <Content Include="Views\Positions\Index.cshtml" />
     <Content Include="Views\Positions\Create.cshtml" />
     <Content Include="Views\Positions\Candidates.cshtml" />
+    <Content Include="Views\Positions\Pass.cshtml" />
+    <Content Include="Views\Positions\Status.cshtml" />
+    <Content Include="Views\Positions\AddCandidate.cshtml" />
+    <Content Include="Views\Positions\Hire.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
