--- a/HiringManager.DomainServices.Transactions.UnitTests/HiringManager.DomainServices.Transactions.UnitTests.csproj
+++ b/HiringManager.DomainServices.Transactions.UnitTests/HiringManager.DomainServices.Transactions.UnitTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="AddCandidateTests.cs" />
     <Compile Include="CreatePositionTests.cs" />
     <Compile Include="HireCandidateTests.cs" />
+    <Compile Include="PassOnCandidateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryPositionSummariesTests.cs" />
   </ItemGroup>
