--- a/HiringManager.DomainServices.Transactions/HiringManager.DomainServices.Transactions.csproj
+++ b/HiringManager.DomainServices.Transactions/HiringManager.DomainServices.Transactions.csproj
@@ -45,6 +45,7 @@
     <Compile Include="AddCandidate.cs" />
     <Compile Include="CreatePosition.cs" />
     <Compile Include="HireCandidate.cs" />
+    <Compile Include="PassOnCandidate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryPositions.cs" />
   </ItemGroup>
