--- a/HiringManager.Domain/HiringManager.Domain.csproj
+++ b/HiringManager.Domain/HiringManager.Domain.csproj
@@ -34,6 +34,7 @@
       <HintPath>..\packages\Isg.Specification.0.1\lib\net40\Isg.Specification.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
