--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -84,7 +84,9 @@
     <Compile Include="Impl\AccountService.cs" />
     <Compile Include="Impl\DomainServiceBase.cs" />
     <Compile Include="Impl\PositionService.cs" />
+    <Compile Include="Impl\UserSession.cs" />
     <Compile Include="IPositionService.cs" />
+    <Compile Include="IUserSession.cs" />
     <Compile Include="SetCandidateStatusRequest.cs" />
     <Compile Include="PositionDetails.cs" />
     <Compile Include="PositionSummary.cs" />
