Renamed HiringManager.Domain to HiringManager.EntityModel to avoid confusion with DDD patterns

--- a/HiringManager.DomainServices.UnitTests/HiringManager.DomainServices.UnitTests.csproj
+++ b/HiringManager.DomainServices.UnitTests/HiringManager.DomainServices.UnitTests.csproj
@@ -59,9 +59,9 @@
       <Project>{F2CD0E3D-A396-4885-B79A-7810F0A39714}</Project>
       <Name>HiringManager.DomainServices</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HiringManager.Domain\HiringManager.Domain.csproj">
+    <ProjectReference Include="..\HiringManager.EntityModel\HiringManager.EntityModel.csproj">
       <Project>{77B8DB13-EC9D-4E56-B298-083B04A8D167}</Project>
-      <Name>HiringManager.Domain</Name>
+      <Name>HiringManager.EntityModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\HiringManager\HiringManager.csproj">
       <Project>{791DA4A2-74BD-447B-B2A1-17B1750E2785}</Project>
