--- a/HiringManager.Mappers.UnitTests/HiringManager.Mappers.UnitTests.csproj
+++ b/HiringManager.Mappers.UnitTests/HiringManager.Mappers.UnitTests.csproj
@@ -67,9 +67,9 @@
       <Project>{F2CD0E3D-A396-4885-B79A-7810F0A39714}</Project>
       <Name>HiringManager.DomainServices</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HiringManager.Domain\HiringManager.Domain.csproj">
+    <ProjectReference Include="..\HiringManager.EntityModel\HiringManager.EntityModel.csproj">
       <Project>{77B8DB13-EC9D-4E56-B298-083B04A8D167}</Project>
-      <Name>HiringManager.Domain</Name>
+      <Name>HiringManager.EntityModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\HiringManager.Mappers\HiringManager.Mappers.csproj">
       <Project>{CF86D312-49E5-43B2-9397-E2F2721DEAB2}</Project>
