Moved development connection string to Web.Debug.config Added Elmah Added Glimpse

--- a/HiringManager.Web/Web.Debug.config
+++ b/HiringManager.Web/Web.Debug.config
@@ -3,6 +3,9 @@
 <!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\AspNetAuth.mdf;Initial Catalog=AspNetAuth;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
