--- a/HiringManager.Web/packages.config
+++ b/HiringManager.Web/packages.config
@@ -3,8 +3,15 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
   <package id="bootstrap" version="3.0.1" targetFramework="net451" />
+  <package id="elmah" version="1.2.2" targetFramework="net451" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net451" />
   <package id="EntityFramework" version="6.0.1" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net451" />
+  <package id="Glimpse" version="1.7.0" targetFramework="net451" />
+  <package id="Glimpse.Ado" version="1.6.0" targetFramework="net451" />
+  <package id="Glimpse.AspNet" version="1.5.0" targetFramework="net451" />
+  <package id="Glimpse.EF6" version="1.5.0" targetFramework="net451" />
+  <package id="Glimpse.Mvc5" version="1.5.0" targetFramework="net451" />
   <package id="jQuery" version="2.0.3" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
