--- a/HiringManager.Web/Web.config
+++ b/HiringManager.Web/Web.config
@@ -14,6 +14,10 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup><section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
   </configSections>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\AspNetAuth.mdf;Initial Catalog=AspNetAuth;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="HiringManager.EntityFramework.Repository" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\HiringManager.EntityFramework.Repository.mdf;Initial Catalog=HiringManager.EntityFramework.Repository;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -87,23 +91,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v11.0" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
+  
 <elmah>
     <!--
         See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
         more information on remote access and securing ELMAH.
     -->
     <security allowRemoteAccess="false" />
-  </elmah><location path="elmah.axd" inheritInChildApplications="false">
+  </elmah>
+  
+  <location path="elmah.axd" inheritInChildApplications="false">
     <system.web>
       <httpHandlers>
         <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
@@ -123,7 +120,8 @@
         <add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
       </handlers>
     </system.webServer>
-  </location><glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+  </location>
+  <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
       <!-- If you are having issues with Glimpse, please include this. It will help us figure out whats going on. 
       <logging level="Trace" />-->
       
@@ -133,4 +131,15 @@
           <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
         </ignoredTypes>
       </runtimePolicies>-->
-    </glimpse></configuration>
+    </glimpse>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+</configuration>
