--- a/HiringManager.EntityFramework.Migrations/HiringManager.EntityFramework.Migrations.csproj
+++ b/HiringManager.EntityFramework.Migrations/HiringManager.EntityFramework.Migrations.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9A9F6DF1-F1B4-45F1-992D-B140A33558A0}</ProjectGuid>
+    <ProjectGuid>{26757989-4B6B-48CC-8196-256CD5D6AAAB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HiringManager.EntityFramework</RootNamespace>
-    <AssemblyName>HiringManager.EntityFramework</AssemblyName>
+    <RootNamespace>HiringManager.EntityFramework.Migrations</RootNamespace>
+    <AssemblyName>HiringManager.EntityFramework.Migrations</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -23,7 +23,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,15 +31,12 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.0.1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.0.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -53,20 +49,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="201311051741447_InitialCreate.cs" />
+    <Compile Include="201311051741447_InitialCreate.Designer.cs">
+      <DependentUpon>201311051741447_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="201311060021096_Position CreatedBy Relationship.cs" />
+    <Compile Include="201311060021096_Position CreatedBy Relationship.Designer.cs">
+      <DependentUpon>201311060021096_Position CreatedBy Relationship.cs</DependentUpon>
+    </Compile>
+    <Compile Include="201311090001082_StringFieldLengths.cs" />
+    <Compile Include="201311090001082_StringFieldLengths.Designer.cs">
+      <DependentUpon>201311090001082_StringFieldLengths.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="201311051741447_InitialCreate.resx">
+      <DependentUpon>201311051741447_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="201311060021096_Position CreatedBy Relationship.resx">
+      <DependentUpon>201311060021096_Position CreatedBy Relationship.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="201311090001082_StringFieldLengths.resx">
+      <DependentUpon>201311090001082_StringFieldLengths.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HiringManager.EntityModel\HiringManager.EntityModel.csproj">
-      <Project>{77B8DB13-EC9D-4E56-B298-083B04A8D167}</Project>
-      <Name>HiringManager.EntityModel</Name>
+    <ProjectReference Include="..\HiringManager.Domain.EntityFramework\HiringManager.EntityFramework.csproj">
+      <Project>{9a9f6df1-f1b4-45f1-992d-b140a33558a0}</Project>
+      <Name>HiringManager.EntityFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\HiringManager\HiringManager.csproj">
-      <Project>{791DA4A2-74BD-447B-B2A1-17B1750E2785}</Project>
+      <Project>{791da4a2-74bd-447b-b2a1-17b1750e2785}</Project>
       <Name>HiringManager</Name>
     </ProjectReference>
   </ItemGroup>
